# steampipe-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  steampipe_server.py
.github/workflows/: publish.yml
src/steampipe_mcp_server/: __init__.py  __main__.py  cli.py  database.py  server.py  test_utils.py  tools.py
tests/: __init__.py  test_db_service.py  test_tools.py
